--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -38,6 +38,9 @@ WEB APP SETUP
    - OPTIONAL: add the path to your env: echo "PATH=/opt/node/bin:$PATH" >>~/.bashrc
 2) Install nginx (sudo apt-get install nginx)
 3) Copy the system configs from etc/* to /etc on the server
+   - the default web root is /data/web/hackerbattleship
+4) Copy the web application files to the web root
+   - cp -r web/* /data/web/hackerbattleship
 4) Restart nginx, and start the node.js instance
    - service nginx start
    - start hackerbattleship
